# Detect-It-Easy-MCP

./: README.md  pyproject.toml
detect_it_easy_mcp/: __init__.py  die_adapter.py  models.py  server.py  signatures.py
