[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "detect-it-easy-mcp"
version = "0.1.0"
description = "MCP server for Detect It Easy using direct die-python bindings"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Detect-It-Easy-MCP" }
]
license = { text = "MIT" }
dependencies = [
  "mcp[cli]>=1.20.0",
  "die-python==0.4.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[project.scripts]
detect-it-easy-mcp = "detect_it_easy_mcp.server:main"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["detect_it_easy_mcp"]